--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="parentdiv">
             <div class="div1">
-                Hello world! This is HTML5 Boilerplate. dfahtjrmhg
+                HELLO I WILL RULE THE WORLD
             </div>
             <div class="div2">
                 <a href="https://www.w3schools.com/css/css_align.asp">
